assets/css/style.css
/* ... */
.project-window .live-link {
  top: 40px;
  z-index: 6;
}

.project-window .github-link {
  top: 80px;
  z-index: 6;
  left: 90px;
}

/* resume */
.resume {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #ffffff, #eeeeee
  );
  border-bottom: 5px solid #fff;
  position: relative;
}

.resume-viewer {
  margin: 0 auto;
  width: 600px;
  padding-top: 10px;
  padding-bottom: 20px;
  position: relative;
}

/* contact */
.contact {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
  position: relative;
  text-align: center;
}

.contact-page {
  text-align: center;
  margin: 0 auto;
  overflow: hidden;
  /*width: 634px;*/
  display: inline-block;
}

.contact-page p {
  text-align: center;
  font-size: 30px;
}

.contact-box {
  float: left;
  padding: 2vw 3vw;
}

.contact img {
  height: 80px;
  width: auto;
  display: block;
  margin: 0 auto;
}

.contact p {
  margin: 0 auto;
  letter-spacing: 2px;
}

.contact-box:hover p {
  opacity: .5;
}



@media (max-width: 600px) {
  body {
    overflow-y: hidden;
  }

  #sidebar {
    min-width: 0;
    width: 100%;
    position: relative;
    height: auto;
    padding-top: 5px;
    padding-left: 15px;
    margin: 0 auto;
    z-index: 7;
  }

  #sidebar h1,
  #sidebar h2 {
    text-align: left;
  }

  #sidebar .top {
    margin: 0 auto;
    display: block;
  }
  #sidebar h1 {
    font-size: 2em;
    display: inline-block;
  }

  #sidebar h2 {
    font-size: 1.75em;
    display: inline-block;
  }

  #sidebar .nav-links {
    margin: 0 auto;
    padding-top: 5px;
    text-align: center;
    padding-left: 0px;
    margin-left: 0px;
    overflow: hidden;
  }

  .nav-links li {
    float: left;
    padding-top: 5px;
    text-decoration: underline;
    color: #000;
    font-size: .9em;
    padding-left: 0px;
    margin-left: 0px;
  }

  .nav-icon {
    display: none;
  }

  #sidebar .contact-links {
    display: none;
  }

  #main  {
    width: 100vw;
    float: none;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
  }

  .main-window {
    min-width: 0;
    width: 100%;
  }

  .intro .name {
    font-size: 2em;
  }

  #main .intro .title {
    font-size: 1.5em;
  }


  .intro .tagline {
    font-size: 1.25em;
  }

  .coding-skills table{
    width: auto;
    padding: 0px 0px;
    margin: 0 auto;
  }


  .coding-skills td:after {
    display: none;
  }

  .coding-skills td:before {
    display: none;
  }

  .coding-skills td {
    width: 6vw;
  }

  .coding-icon {
    width: 100%;
    height: auto;
    padding-left: 0.1em;
    padding-top: 0.1em;
    padding-bottom: 0.1em;
  }


  .coding-skills td:after {
    bottom: 2em;
  }

  .coding-skills td:before {
    bottom: 1.3em;
  }

  .coding-skills td:hover:before,
  .coding-skills td:hover:after {
    display: none;
  }

  .splash-img {
    height: 10em;
  }

  #main .secondary-h1 {
    font-size: 1.9em;
    padding-top: .5em;
    padding-bottom: .5em;
    margin: 0px;
  }

  .about-me p {
    font-size: 1em;
    width: 80%;
    padding-bottom: 1em;
  }

  .project-window {
    width: 90%;
  }

  .project-window img {
    float: none;
    width: 70%;
    height: auto;
    margin: 0 auto;
  }

  .project-window ul {
    float: none;
    width: 70%;
    margin: 0 auto;
    padding: 0px;
    font-size: 1em;
  }

  .project-window h2 {
    text-align: center;
  }

  .project-window .live-link,
  .project-window .github-link {
    position: relative;
    left: 0;
    display: block;
    margin: 0 auto;
    width: 40%;
    text-align: center;
    margin-top: .1em;
  }

  .display-none {
    opacity: 1;
  }

  .project-window .live-link {
    top: 0;
    position: relative;
  }

  .project-window .github-link {
    top: 0 !important;
    left: 0;
    position: relative;
  }

  .resume-viewer {
    width: 80%;
  }

  iframe {
    margin: 0 auto !important;
    width: 100%;
    height: 100vw;
  }

  .contact {
    text-align: center;
  }

  .contact-page {
    display: inline-block;
  }

  .contact-box {
    /*margin: 1%;
    padding: 1em;
    display: block;*/
  }

  .contact-box img {
    height: auto;
    width: 10vw;
    display: block;
    margin: 0 auto;
  }

  .contact p {
    font-size: 1em;
  }

  .display-zero {
    display: block;
  }

  .nav-links li:hover {
    background: none;
  }
}
/* ... */

